# CMakeList.txt : CMake project for basic Raytracing, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.10)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

# project ("basic Raytracing")

# Add source to this project's executable.
# add_executable (CMakeTarget   "main.cc")

project(basicRayTracing)

add_executable(basicRayTracing main.cc "vec3.h" "color.h" "ray.h" "hittable.h" "sphere.h" "hittable_list.h" "rtweekend.h" "interval.h" "camera.h" "material.h" "tes.h" "aabb.h" "bvh.h" "texture.h" "rtw_stb_image.h" "external" "perlin.h" "quad.h" "constant_medium.h")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET basicRayTracing PROPERTY CXX_STANDARD 20)
endif()

# TODO: Add tests and install targets if needed.
